add training sys to subject
